--- a/templates/result.html
+++ b/templates/result.html
@@ -77,7 +77,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">Nigga Catcher</a>
+        <a class="navbar-brand" href="#">DeFendReality</a>
        
     </div>
 </nav>
@@ -112,7 +112,7 @@
                     <br>
                     <br>
 
-                    <!-- Deepfake Detection Rate Label -->
+                   
                     <div class="detection-label">
                         <h5 class="bold-text">Deepfake Detection Rate:</h5>
                     </div>
@@ -135,12 +135,12 @@
                 
                     <script>
                         var progressValue = parseFloat("{{ video_info['per'] }}");
-                        var totalValue = 100; // Yüzde cinsinden tam değer
+                        var totalValue = 100; 
 
-                        // İlerleme çubuğunu güncelle
+                       
                         document.querySelector(".progress-bar").style.strokeDasharray = progressValue + " " + totalValue;
 
-                        // Yüzde etiketini güncelle
+                      
                         document.querySelector(".progress-label").textContent = Math.round((progressValue / totalValue) * 100) + "%";
                     </script>
                 
